--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,32 +1,36 @@
-<header class="d-flex justify-content-between align-items-center">
-
-    <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-0 fixed-top">
-        <a href="/" class="navbar-brand">FLAVOR/HUB</a>
-        <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-
-        <div class="collapse navbar-collapse" id="navLinks">
-            <ul class="navbar-nav ">
-                <li class="nav-item">
-                    <a href="/login" class="nav-link d-flex-justify-content-end">Log In</a>
-                </li>
-                <li class="nav-item">
-                    <a href="/register" class="nav-link d-flex-justify-content-end">Register</a>
-                </li>
-
-                <li class="nav-item">
-                    <a href="/create/recipe" class="nav-link d-flex-justify-content-end">Recipes</a>
-                </li>
-
-            </ul>
-        </div>
-
-    </nav>
+<header>
+    {{#if user}}
+    <p>Welcome, {{user.username}}</p>
+    <a href="/logout">Log Out</a>
+    {{else}}
+    <a href="/login">Log In</a>
+    {{/if}}
 </header>
-{{#if user}}
-<p class="text-center">Welcome, {{user.username}} <a href="/logout">Log Out</a></p>
-{{else}}
-{{!-- <a class="text-center" href="/login">Log In</a> --}}
-{{/if}}
+
+
+<h1 class="text-center">User App API</h1>
+<p class="text-center">Welcome to our API! You'll find the usage instructions below.</p>
+
+<div class="row justify-center">
+    <a href="/create/user">Create a User</a>
+    <a href="/create/book">Add a Book</a>
+    <a href="/data">View App Data</a>
+</div>
+
+<h3>User Routes:</h3>
+<p><span>GET /api/users</span> - Returns all users from the database</p>
+<p><span>GET /api/users/{USER_ID}</span> - Get user by id from the database</p>
+<p><span>GET /api/users/{USER_ID}</span> - Get user by id from the database</p>
+<p><span>GET /api/users/books</span> - Get all users and their associated books</p>
+<p><span>GET /api/user/books?user_id={ID}</span> - Get one user and their associated books</p>
+<p><span>POST /api/user/{USER_ID}</span> {JSON Object that includes username, email and password} - Add new user to
+    the database</p>
+<p><span>DELETE /api/user/{USER_ID}</span> - Remove a user from the database</p>
+
+<h3>Book Routes:</h3>
+<p><span>GET /api/books</span> - Returns all books from the database and the associated users</p>
+<p><span>GET /api/book/{BOOK_ID}</span> - Returns one book from the database by ID and the associated user</p>
+<p><span>GET /api/book/search?title={QUERY}</span> - Returns all books from the database by title search</p>
+<p><span>POST /api/books</span> {JSON Object that includes title, author and release_date} - Create a book in the
+    database</p>
+<p><span>DELETE /api/book/{BOOK_ID}</span> - Remove a book from the database by ID</p>
